--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Hugh
 description: Hugh's blog
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://hughmushan.github.io/images/jekyll-logo.png
+avatar: https://hughmushan.github.io/images/logo.jpg
 
 #
 # Flags below are optional
