--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "victorigortemplate",
+  "name": "hugh",
   "version": "1.0.0",
-  "description": "My jekyll blog template.",
+  "description": ".",
   "main": "gulpfile.js",
   "scripts": {
     "test": "test"
@@ -26,7 +26,8 @@
     "gulp-imagemin": "^2.1.0",
     "gulp-plumber": "^0.6.6",
     "gulp-stylus": "^1.3.7",
-    "gulp-uglify": "^1.0.2"
+    "gulp-uglify": "^1.0.2",
+    "kouto-swiss": "^0.11.14"
   },
   "dependencies": {
     "jeet": "^6.1.4",
